app/assets/sass/ail.scss
/* ... */
body section:last-child {
  padding-bottom: 20px;
}

/* layout for content */
.row .columns .boxed li.content-item:before,
.row .columns .content-teaser > li:before {
    content: none;
}
.row .columns .boxed li.content-item,
.row .columns .content-teaser > li {
    position: relative;
    border: 1px solid #000;
    width: 100%;
    height: 225px;
    list-style-type: none;
    margin: 0 0 1.5em;
    padding: 1.25em 34.25% 1.75em 1.2em;
    background-color: #f1f1f1;
    display: block;
    vertical-align: middle;
    font-size: 0.857em;
    .content-wrapper {
      overflow-y: hidden;
      height: 100%;
    }
    h1, h2,h3,h4,p,ul,li {
      float: left;
      text-align: left;
    }
    h1 {
      font-size: 133%;
    }
    h2 {
      font-size: 125%;
    }
    h3 {
      font-size: 120%;
    }
    h4 {
      font-size: 112%;
    }
    h1, h2, h3, h4 {
      margin-top: 0;
      margin-bottom: 0.33em;
      font-weight: $semibold;
      color: #000;
      width: 100%;
      clear: both;
    }
    p {
      font-size: 100%;
    }
    p, ul {
      display: block;
      margin-top: 0;
      clear: left;
    }
    li {
      float: left;
      line-height: 1.33em;
      margin-bottom: 0.25em;
      width: auto;
      display: inline-block;
      width: 50%;
      padding-right: 2%;
    }
    img {
      position: absolute;
      right: 0;
      top: 0;
      height: 100%;
    }
}

/* Fancybox images in content */
body section div {
  .fancybox-wrapper a:after {
    content: '';
    font-size: 0;
  }
  .fancybox-wrapper {
    text-align: center;
    margin-bottom: 1.5em;
  }
  .fancybox-wrapper .caption {
    display: block;
    font-size: 0.8em;
    line-height: 1.2em;
    font-weight: $semibold;
    font-style: normal;
    width: auto;
    margin: 0 auto;
    vertical-align: top;
  }
}


body > footer {
  background-color: $color_footer;
  min-height: 300px;
  padding-top: 20px;
  margin-top: 40px;
  color: #fff;
  a {
    color: #fff;
    text-decoration: none;
  }
  ul, li {
    max-width: 180px;
  }
  .row > ul {
    width: 100%;
    max-width: none;
    .heading {
      float: left;
      margin-right: 1.5em;
      > a {
        font-weight: bold;
      }
    }
    ul {
      padding: 0;
      margin: 0.75em 0 0;
    }
    ul li {
      display: block;
      width: 100%;
      a {
        font-weight: normal;
      }
    }
  }
  .logo {
    position: relative;
    width: 200px;
    height: 130px;
    display: block;
    padding-top: 0.5em;
    background: transparent url('/images/ail/ail_logo_small.png') no-repeat 5px 0.5em;
    color: #fff;
    p {
      padding-top: 0.35em;
      padding-left: 88px;
      width: 100%;
      font-size: 0.9em;
      line-height: 1.2em;
      color: #fff;
    }
    .registered {
      position: absolute;
      bottom: 0;
      left: 0;
    }
  }
}

/* Move the Datepicker UI 'forward' */
body div.ui-datepicker {
  z-index: 2000 !important;
}

/* Adjustments to form */
li.field input + .picker {
  position: relative;
  top: 13px;
}
/*
section.row .field input,
section.row .field .adjoined {
  font-size: 1em;
  line-height: 1.2em;
}

section.row .field input[type='text'].wide,
section.row .field textarea.wide {
  max-width: 400px;
}
*/

